updated contacts and hobby

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <hr />
 
     <h2>Summery</h2>
-    <p></p>
+    <p>Computer Science Masters with strong foundation in code computer science concepts
+        and software development. Passionate and eager learner, with love for automation
+        and problem solving. Ready to apply my skills and knowledge while collaborating
+        with a dynamic team to develop innovative products and drive meaningful progress in the field.
+    </p>
     <hr/>
 
     <h2>Education</h2>
@@ -57,6 +61,12 @@
         <li>DBMS (MySql)</li>
         <li>Machine Learning</li>
         <li>Git, Github </li>
+    </ul>
+    <hr />
+
+    <h2>Certificate</h2>
+    <ul>
+        <li>Artificial Intelligence by Samsung Innovation Compus (2023)</li>
     </ul>
     <hr />
 
