fixed screen width and other issues

--- a/index.html
+++ b/index.html
@@ -13,17 +13,34 @@
     <h2>Summery</h2>
     <p>Computer Science Masters with strong foundation in code computer science concepts
         and software development. Passionate and eager learner, with love for automation
-        and problem solving. Ready to apply my skills and knowledge while collaborating
+        and problem solving. Ready to leverage my skills and knowledge while collaborating
         with a dynamic team to develop innovative products and drive meaningful progress in the field.
     </p>
     <hr/>
 
     <h2>Education</h2>
     <ul>
-        <li>MCA from Babasaheb Bhimrao Ambedkar University (Lucknow) from 2022 to 2024 with 85.1% (Class Rank: 1/54)</li>
-        <li>B.Sc. from Jamia Millia Islamia (New Delhi) from 2016 to 2019 with 8.39 CGPA</li>
-        <li>Intermediate from KV AFS Memaura (Lucknow) from 2014-2015 with 82% </li>
-        <li>High School from KV AFS Memaura (Lucknwo) from 2012-2013 with 8.2 CGPA</li>
+        <li>
+            MCA from 
+            <a href="https://www.bbau.ac.in/">Babasaheb Bhimrao Ambedkar University</a> 
+            (Lucknow) from 2022 to 2024 with 85.1% (Class Rank: 1/54)
+        </li>
+        <li>
+            B.Sc. from 
+            <a href="https://jmi.ac.in/">Jamia Millia Islamia</a> 
+            (New Delhi) from 2016 to 2019 with 8.39 CGPA
+        </li>
+        <li>
+            Intermediate from 
+            <a href="https://afsmemaura.kvs.ac.in/">KV AFS Memaura</a>
+            (Lucknow) 
+            from 2014-2015 with 82% 
+        </li>
+        <li>
+            High School from 
+            <a href="https://afsmemaura.kvs.ac.in/">KV AFS Memaura</a> 
+            (Lucknow) from 2012-2013 with 8.2 CGPA
+        </li>
     </ul>
     <hr />
 
