--- a/public/contact.html
+++ b/public/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Contact Details</title>
     </head>
     <body>
@@ -13,6 +14,7 @@
             </li>
             <li>E-Mail : shajidalikhan98@gmail.com</li>
             <li>Phone : +91 7084861619</li>
+            <li><a href="https://linkedin.com/in/shajid-ali-khan-0bb105312">LinkedIn Profile</a></li>
             <li> <a href="https://github.com/shajidalikhan">Git-Hub Link</a></li>
             <li><a href="https://leetcode.com/u/shajidalikhan/">LeetCode Link </a></li>
         </ul>
