profile pic is beside name

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <h1>SHAJID ALI KHAN</h1>
-    <img src="./assets/my_profile_pic.jpg" alt="profile pic" height="100"/>
-    <hr />
+    <div id="title">
+        <h1 id="name">Shajid Ali Khan <img class="image" id="profile_pic" src="./assets/my_profile_pic.jpg" alt="profile pic"/></h1>
+    </div>
 
     <h2>Summery</h2>
     <p>Computer Science Masters with strong foundation in code computer science concepts
