added certificate page and other updates

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <h2>Certificate</h2>
     <ul>
-        <li>Artificial Intelligence by Samsung Innovation Compus (2023)</li>
+        <li><a href="./public/certificates.html">Artificial Intelligence by Samsung Innovation Compus (2023)</a></li>
     </ul>
     <hr />
 
@@ -99,7 +99,7 @@
     
     <footer>
         <small>
-            &copy;  Shajid Ali Khan. All rights reserved.
+            Copyright &copy; 2025 Shajid Ali Khan. All rights reserved.
         </small>
     </footer>
 </body>
