--- a/public/contact.html
+++ b/public/contact.html
@@ -22,7 +22,7 @@
     
         <footer>
             <small>
-                &copy;  Shajid Ali Khan. All rights reserved.
+                Copyright &copy; 2025 Shajid Ali Khan. All rights reserved.
             </small>
         </footer>
     </body>
