--- a/public/hobby.html
+++ b/public/hobby.html
@@ -11,15 +11,15 @@
             <li>Gaming.</li>
             <li>Watching Anime, Animated Series (or Movies) and Series and Movies.</li>
             <li>Reading Comics, Manga, Manhua and Novels.</li>
-            <li>Gaining Knowledge about things that peeked my interest.</li>
             <li>Listning to Music</li>
+            <li>Gaining Knowledge about things that peeked my interest.</li>
         </ul>
         
         <hr />
     
         <footer>
             <small>
-                &copy;  Shajid Ali Khan. All rights reserved.
+                Copyright &copy; 2025 Shajid Ali Khan. All rights reserved.            
             </small>
         </footer>
     </body>
