--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <h3>Others</h3>
     <ul>
-        <li><a href="./public/hobby.html">My Hobbies</a></li>
+        <li><a href="./public/hobby.html">Hobbies</a></li>
         <li><a href="./public/contact.html">Contact Me</a></li>
     </ul>
     
