--- a/public/hobby.html
+++ b/public/hobby.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My Hobbies</title>
+        <title>Hobbies</title>
     </head>
     <body>
         <h1>Hobbies</h1>
@@ -11,7 +11,7 @@
             <li>Gaming.</li>
             <li>Watching Anime, Animated Series (or Movies) and Series and Movies.</li>
             <li>Reading Comics, Manga, Manhua and Novels.</li>
-            <li>Listning to Music</li>
+            <li>Listening to Music.</li>
             <li>Gaining Knowledge about things that peeked my interest.</li>
         </ul>
         
